[package]
name = "phashsum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
memmap2 = "0.9.4"
rayon = "1.8.1"
xxhash-rust = { version = "0.8.8", features = ["xxh64"] }
